# SaRoMaN

./: .gitignore  EMR_TASD.gdml  MIND.gdml  MIND_l2.gdml  MIND_v3.gdml  MIND_v4.gdml  README.md  batch_submit.py  field_map_generator.py  genie-mcjob-10.status  genie-mcjob-1010.status  input-flux.root  print_config.py  saroman.py  saroman.py~
analysis/: .sconsign.dblite  (+13 more)
digi_ND/examples/: Makefile  Makefile.am  Makefile.in  root_2_dst  root_2_dst.cpp  simple_smear  simple_smear.cpp  smear_analysis
digi_ND/examples/.deps/: root_2_dst.Po  simple_smear.Po  smear_analysis.Po
digi_ND/examples/.svn/: entries
digi_ND/examples/.svn/text-base/: Makefile.am.svn-base  runMielSim.cpp.svn-base  simple_smear.cpp.svn-base  smear_analysis.cpp.svn-base
digi_ND/examples/param/: fit_cats.param  oldana_cats.param  smear_cats.param
digi_ND/examples/param/.svn/: entries
mind_rec/util/: #cluster.cpp#  DeDxMap.cpp  DeDxMap.h  DeDxMap.lo  EMINDplate.cpp  EMINDplate.lo  MINDfieldMapReader.cpp  MINDfieldMapReader.h  MINDfieldMapReader.lo  MINDfitman.cpp  MINDfitman.h  MINDfitman.lo  MINDplate.cpp  MINDplate.lo  MINDplotter.cpp  MINDplotter.h  MINDplotter.lo  MINDsection.h  MINDsection.lo  MINDsetup.cpp  MINDsetup.h  MINDsetup.lo  Makefile  Makefile.am  Makefile.in  SetupSk.h  Utilities.lo  cluster.cpp  cluster.h  cluster.lo  libutil.la  rec_hit.cpp  shower.lo
mind_rec/util/.deps/: DeDxMap.Plo  EMINDplate.Plo  MINDfieldMapReader.Plo  MINDfitman.Plo  MINDplate.Plo  MINDplotter.Plo  MINDsection.Plo  MINDsetup.Plo  Utilities.Plo  cluster.Plo  shower.Plo
mind_rec/util/.svn/: entries
(+384 files in other folders)
