
noinst_LTLIBRARIES = libutil.la

pkginclude_HEADERS = Utilities.h MINDsetup.h MINDsection.h MINDplate.h EMINDplate.h MINDfieldMapReader.h MINDplotter.h shower.h MINDfitman.h cluster.h DeDxMap.h

INCLUDES= -I. -I.. 

libutil_la_SOURCES = Utilities.cpp MINDsetup.cpp MINDsection.cpp MINDplate.cpp EMINDplate.cpp MINDfieldMapReader.cpp MINDplotter.cpp shower.cpp MINDfitman.cpp cluster.cpp DeDxMap.cpp

CLEANFILES = *~* 


